--- a/Frei.Avalonia/Controls/TimeBar.axaml
+++ b/Frei.Avalonia/Controls/TimeBar.axaml
@@ -1,16 +1,19 @@
-<Styles xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="clr-namespace:Frei.Avalonia.Controls">
-  <Design.PreviewWith>
-    <controls:TimeBar Duration="10"/>
-  </Design.PreviewWith>
+<Styles
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:Frei.Avalonia.Controls">
+    <Design.PreviewWith>
+        <controls:TimeBar Duration="10" />
+    </Design.PreviewWith>
 
-  <Style Selector="controls|TimeBar">
-    <!-- Set Defaults -->
+    <!--<Style Selector="controls|TimeBar">
+    -->
+    <!--  Set Defaults  -->
+    <!--
     <Setter Property="Template">
       <ControlTemplate>
         <TextBlock Text="Templated Control" />
       </ControlTemplate>
     </Setter>
-  </Style>
+  </Style>-->
 </Styles>
